--- a/Project_CS511/Component/addcard.resx
+++ b/Project_CS511/Component/addcard.resx
@@ -121,7 +121,7 @@
   <data name="pictureBox4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAEpJREFUWEft1DEKACAMBMH7/7d8mBJIesXIFe5C2jDVieiykWdr5tkCAAAAgCeA
+        DgAACw4BQL7hQQAAAEpJREFUWEft1DEKACAMBMH7/7d8mBJIesXIFe5C2jDVieiykWdr5tkCAAAAgCeA
         mNZ63H1bs20HnFSPbQEAAACAHRDT2j6v9FPSAnAXWcXrLCPzAAAAAElFTkSuQmCC
 </value>
   </data>
@@ -430,10 +430,10 @@
         PwBiL//Z
 </value>
   </data>
-  <data name="b.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vQAADr0BR/uQrQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAENmSURBVHhe7d0H
+        vwAADr8BOAVTJAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAENmSURBVHhe7d0H
         lC1Vua7hLUFyRlBAUEygAiJgQMCsoGRMiKKiIIKBpIiKRAlmwASKehQMiFlRQAUxJzCQwUNQkCQ5G+79
         PqEPuPnpvXqtWrX+Oef7jvGMca5Xd3dXVVetrqo55ywimnHLyKaypxwpJ8t58he5Vv4p/w+d8jb1tvU2
         9rb2Nve2f5t4XzxIiIiIOm0heZF8Vs6X6AKFyfO+8T7yvvI+IyIimnHzyJbydblVogsO8vI++5psIXML
