--- a/Project_CS511/Properties/Resources.resx
+++ b/Project_CS511/Properties/Resources.resx
@@ -184,4 +184,10 @@
   <data name="marker" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\marker.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="star_off" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\star_off.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="star_on" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\star_on.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
