--- a/Project_CS511/SubPage/likedSubPage.resx
+++ b/Project_CS511/SubPage/likedSubPage.resx
@@ -118,26 +118,59 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pb_add.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btn_back.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAFHSURBVHhe7ZpLahtAFAR1CHvna+WQ/pwjOZCzT/rtzFAY
-        hRImz+qC2gyPnpkWCGHPpZRSSinlEx7jW/wd/yxxzvoaH6JmLk+bbPAlajZ98qfvUUPBm9RQ6CY1FLpJ
-        DYVuUkOhm9RQ6CY1FLpJDYVaf8b5kfLRWaNZq4ZCrT/iyazRrFVDodYWEE9aQKRZq4ZCrS0gnrSASLNW
-        DYVaW0A8aQGRZq0aCiV/xbnENT7Fk1mjWXL2ojOQGgolb/IHyCuZvegMpIZCyRYQv4oWEOkMpIZCybv/
-        EvwX5xIns0azVg2FWltAPGkBkWatGgq1toB40gIizVo1FGptAfGkBUSatWoo1Hr3/xr7SjUUukkNhW5S
-        Q6Gb1FDoJjUUukkNhW5Sc/dPZefVNYVv8Dlq5sn5lDBt0ib/o3PWufxNnsuXUkop5TtyufwF8u3xwJqD
-        a7QAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="pb_sub.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAADMSURBVHhe7dsxCgJBFATRPaseRDyJ3lTLzKA7E4Teanjh
-        h6HyOZxz37viMe6Cuide4z4R6gyAdLTEAKgzANLREgOgzgBIR0sMgDoDIB0tMQDqDIB0tMQAqDMA0tES
-        A6DOAEhHSwyAOgMgHS35aYAb/r070tsaA6DOAEhHjQHw7xkA6W2NAVBnAKSjJQZAnQGQjpYYAHUGQDpa
-        YgDUGQDpaIkBUGcApKMlBkCdAZCOlhgAdQZAOlpiANQZAOloiQFQd/oAp/846dypdhxvSBe6WPsI1I4A
-        AAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAtNSURBVHhe7d3P
+        q2d1HcfxsZlSA4tGB2uRA24isjZFBUVJTGgpaD9GMjRqEZX9gKQWbQaDiCChjUqbNlaLlILITb+pVjW1
+        CKkm0QaKKLMsDLFGs14fnIvX6Xi9d+beme85r8cDnn/AWb3e59w7d3YBAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA0Gl/el+6NX0/HUl/TA+k+9Iv0tfSoXRpOjcBADN0
+        Qbox/TL9d4s9lG5Pb0oAwAyM4b85/TNNjftWO5yuSADAinpvGp/1p4b8VLsrXZQAgBVxXho/w58a7u3s
+        b+mqBACcYS9Kd6epwd6JHk/jdwsAgDNk/Hb/vWlqqHe6mxIAcJqN8T+apsb5dHVDAgBOk/HLeOPf70+N
+        8uns0fT6BADssFV481/f79PzEwCwQ1blzf/EvpAAgB2wam/+6xs/CnhJAgC20aq++a/vSwkA2Car/Oa/
+        vn+nfQkAOEVzePNf34cTAHAK5vLmv77xXw0DACdpbm/+az2SzkkAwBbN8c1/fa9JAMAWzPXNf33XJwBg
+        k+b+5r/WoQQAbMIS3vzX+nwCAJ7BUt7817olAQAbWNKb/1qfSwDA01jam/9an0oAwIQlvvmvdU0CAE6w
+        1Df/tV6RAIB1lvzmP/p72p0AgOOW/uY/+kYCAI5b+pv/Wu9KAEA0vPmP/pHOTQBQr+XNf/TZBAD1Wt78
+        Rw+lfQkAqjW9+Y9uTABQrenNf3Q47UkAUKvtzf/BdHECgFptb/7/SgcSANRqG//H0jsSANRq++w/xv+6
+        BAC1jD8AlDH+AFDG+ANAGeMPAGWMPwCUMf4AUMb4A0AZ4w8AZYw/AJQx/gBQxvgDQBnjDwBljD8AlDH+
+        AFDG+ANAGeMPAGWMPwCUMf4AUMb4A0AZ4w8AZYw/AJQx/gBQxvgDQBnjDwBljD8AlDH+AFDG+ANAGeMP
+        AGWMPwCUMf4AUMb4A0AZ4w8AZYw/AJQx/gBQxvgDQBnjDwBljD8AlDH+AFDG+ANAGeMPAGWMPwCUMf4A
+        UMb4A0AZ4w8AZYw/AJQx/gBQxvgDQBnjDwBljD8AlDH+AFDG+ANAGeMPAGWMPwCUMf4AUMb4A0AZ4w8A
+        ZYw/AJQx/gBQxvgDQBnjDwBljD8AlDH+AFDG+ANAGeMPAGWMPwCUMf4AUMb4A0AZ4w8AZYw/AJQx/gBQ
+        xvgDQBnjDwBljD8AlDH+AFDG+ANAGeMPAGWMPwCUMf4AUMb4A0AZ4w8AZYw/AJQx/gBQxvgDQBnjDwBl
+        jD8AlDH+AFDG+ANAGeMPAGWMPwCUMf4AUMb4A0AZ4w8AZYw/AJQx/gBQxvgDQBnjDwBljD8AlDH+AFDG
+        +ANAGeMPAGWMPwCUMf4AUMb4A0AZ4w8AZYw/AJQx/gBQxvgDQBnjDwBljD8AlDH+AFDG+ANAmf3paJoa
+        yqV2RzooSVpcB9Jr0/mJDTSOvySpo7+kr6cb0oWJ44y/JKmlR9O30htSNeMvSWrtB+mSVMf4S5LaO5Y+
+        nXanCsZfkqQn+2Fa/C8MGn9Jkv6/36Txz+EXaV86kqYeXJKk9u5NL0yLcm76eZp6YEmS9ESH0zlpMb6Y
+        ph5UkiQ9tdvSIlyRph5QkiRNd1matfEZY/xMY+rhJEnSdPeks9NsfTRNPZgkSdq4D6VZ2pP8kz9Jkk6u
+        saFjS2fnyjT1QJIkaXNdnmbnK2nqYSRJ0uYaWzorZ6W/pqmHkSRJm2v8d8JjU2fj5WnqQSRJ0tYamzob
+        16eph5AkSVvr3Wk2xn9vOPUQkiRpa41NnQ1/+leSpO1pVn8a2L8AkCRpe/pymg0HgCRJ29OsDgA/ApAk
+        aXua1Y8AbkpTDyFJkrbW2NTZuC5NPYQkSdpa16bZuCRNPYQkSdpaY1NnY/zZwgfS1INIkqTNdX+a1Z8C
+        Hm5PUw8jSZI216z+BcCat6aph5EkSZvrsjQ7e9Lv0tQDSZKkjTuadqdZ+kiaeihJkrRxH0izdXa6J009
+        mCRJmu636Tlp1t6Sph5OkiRN9+a0COPPGE49oCRJemq3pMU4Jx1OUw8qSZKe6Kdp/Ph8US5IR9LUA0uS
+        1N696cK0SPvT+GcNUw8uSVJrv0ovTovmCJAk6cm+l/amCo4ASVJ7x9KhNNs/9nOyHAGSpNa+k16aajkC
+        JEktjTf+b6bXJcIRIElaan9Kd6YPpn2JEzQeAXekg5KkRfXOdCC9Kr0gsQkXpfvS1FguscfSdQkA6jkC
+        AKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAA
+        SjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCU
+        IwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkC
+        AKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAA
+        SjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCU
+        IwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkC
+        AKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAA
+        SjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCUIwAASjkCAKCU
+        IwAASjkCAKCUIwAASjkCAKDU/nQ0TQ3mEhtHwFUJAOq1HQEPp1cnAKjX9uOAP6S9CQDqtX0J+GoCAKLt
+        S8AbEwAQTV8CfpYAgOOavgRcmgCA41q+BNyZAIB1Gr4EPJKelwCAdRq+BFydAIATLP1LwM0JAJiw5C8B
+        P0oAwNNY6peA8ZcBAYANLPFLwH/SWQkA2MASvwQ8NwEAz2BpXwLOSwDAJizlS4AfAQDAFi3hS8D9CQDY
+        orl/CfhJAgBOwpy/BNyWAICTNNcvAdckAOAUzO1LwLF0QQIATtGcvgTclQCAbTKXLwFvSwDANlr1LwFH
+        0rMSALDNVvlLwNsTALBDVvEI+HYCAHbYKv044ME0jhIA4DRYhS8Bj6UrEwBwGp3pLwEfSwDAGTC+BIzf
+        wJ8a6J3q8fTxBACcQeen8Z/wTI31dvdwujYBACtgT/pMGj+Xnxru7eju9LIEAKyYV6Yfp6kBP9keSp9M
+        z04AwAq7PH03jZ/XT436ZvpzOpT2JgBgRsYvCX4ijT/WM97kp4Z+fb9Ot6bL0u4EAMzcGPSL04F0ML0/
+        vSddncaPDs5LAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAECf
+        Xbv+B4nXJeDk2iuKAAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
