--- a/Project_CS511/Properties/Resources.resx
+++ b/Project_CS511/Properties/Resources.resx
@@ -199,4 +199,7 @@
   <data name="heart_on" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icons\heart_on.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="_default" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\avatar\default.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
