--- a/Project_CS511/Properties/Resources.resx
+++ b/Project_CS511/Properties/Resources.resx
@@ -202,4 +202,10 @@
   <data name="_default" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icons\avatar\default.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="add_food" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\add_food.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="delete_food" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\delete_food.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
